--- a/repos/CppProject/CppProject/CppProject.vcxproj
+++ b/repos/CppProject/CppProject/CppProject.vcxproj
@@ -123,11 +123,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BinarySearchTree.cpp" />
     <ClCompile Include="Cat.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MyString.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BinarySearchTree.h" />
     <ClInclude Include="Cat.h" />
     <ClInclude Include="MyString.h" />
     <ClInclude Include="Person.h" />
