--- a/repos/D3D11_FPS_Project_1029/D3D11_FPS_Project_1029/D3D11_FPS_Project_1029.vcxproj
+++ b/repos/D3D11_FPS_Project_1029/D3D11_FPS_Project_1029/D3D11_FPS_Project_1029.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Sound.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="WinMain.h" />
     <ClInclude Include="D3DSetting.h" />
@@ -195,6 +196,7 @@
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Sound.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
