--- a/repos/DataStructure_CPP_1210/DataStructure_1210/DataStructure_1210.vcxproj
+++ b/repos/DataStructure_CPP_1210/DataStructure_1210/DataStructure_1210.vcxproj
@@ -154,12 +154,20 @@
     <ClCompile Include="ConvertInToPost.cpp" />
     <ClCompile Include="ExpTree.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Math.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConvertInToPost.h" />
     <ClInclude Include="ExpTree.h" />
+    <ClInclude Include="InsertionSort.h" />
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="Math.h" />
+    <ClInclude Include="MergeSort.h" />
+    <ClInclude Include="QuickSort.h" />
+    <ClInclude Include="RadixSort.h" />
+    <ClInclude Include="SelectionSort.h" />
     <ClInclude Include="SimpleBTree.h" />
+    <ClInclude Include="SimpleHeap.h" />
     <ClInclude Include="SimpleQueue.h" />
     <ClInclude Include="SimpleStack.h" />
   </ItemGroup>
