--- a/repos/DataStructure_CPP_1210/DataStructure_1210/DataStructure_1210.vcxproj
+++ b/repos/DataStructure_CPP_1210/DataStructure_1210/DataStructure_1210.vcxproj
@@ -153,10 +153,10 @@
   <ItemGroup>
     <ClCompile Include="ConvertInToPost.cpp" />
     <ClCompile Include="ExpTree.cpp" />
-    <ClCompile Include="HashTable.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="PersonInfo.cpp" />
+    <ClCompile Include="SimpleGraph.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AVLTree.h" />
@@ -173,10 +173,10 @@
     <ClInclude Include="Search.h" />
     <ClInclude Include="SelectionSort.h" />
     <ClInclude Include="SimpleBTree.h" />
+    <ClInclude Include="SimpleGraph.h" />
     <ClInclude Include="SimpleHeap.h" />
     <ClInclude Include="SimpleQueue.h" />
     <ClInclude Include="SimpleStack.h" />
-    <ClInclude Include="Slot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
