--- a/repos/DataStructure_CPP_1210/DataStructure_1210/DataStructure_1210.vcxproj
+++ b/repos/DataStructure_CPP_1210/DataStructure_1210/DataStructure_1210.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ConvertInToPost.cpp" />
+    <ClCompile Include="DFSGraph.cpp" />
     <ClCompile Include="ExpTree.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
@@ -161,6 +162,7 @@
   <ItemGroup>
     <ClInclude Include="AVLTree.h" />
     <ClInclude Include="ConvertInToPost.h" />
+    <ClInclude Include="DFSGraph.h" />
     <ClInclude Include="ExpTree.h" />
     <ClInclude Include="HashTable.h" />
     <ClInclude Include="InsertionSort.h" />
