--- a/repos/DataStructure_CPP_1210/DataStructure_1210/DataStructure_1210.vcxproj.filters
+++ b/repos/DataStructure_CPP_1210/DataStructure_1210/DataStructure_1210.vcxproj.filters
@@ -14,12 +14,6 @@
     <ClCompile Include="PersonInfo.cpp">
       <Filter>HashTable</Filter>
     </ClCompile>
-    <ClCompile Include="SimpleGraph.cpp">
-      <Filter>Graph</Filter>
-    </ClCompile>
-    <ClCompile Include="DFSGraph.cpp">
-      <Filter>Graph</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SimpleStack.h">
@@ -77,6 +71,9 @@
       <Filter>Graph</Filter>
     </ClInclude>
     <ClInclude Include="DFSGraph.h">
+      <Filter>Graph</Filter>
+    </ClInclude>
+    <ClInclude Include="BFSGraph.h">
       <Filter>Graph</Filter>
     </ClInclude>
   </ItemGroup>
