--- a/repos/SimpleFPS_DX11_1029/D3D11_FPS_Project_1029/D3D11_FPS_Project_1029.vcxproj
+++ b/repos/SimpleFPS_DX11_1029/D3D11_FPS_Project_1029/D3D11_FPS_Project_1029.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Axis.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="House.h" />
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="FBXLoader.h" />
@@ -185,6 +186,7 @@
     <ClCompile Include="Axis.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="House.cpp" />
     <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="DxSettings.cpp" />
