--- a/repos/InfiniteShot_DX11/InfiniteShot_DX11/InfiniteShot_DX11.vcxproj
+++ b/repos/InfiniteShot_DX11/InfiniteShot_DX11/InfiniteShot_DX11.vcxproj
@@ -25,7 +25,9 @@
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Loading.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Skymap.cpp" />
     <ClCompile Include="StringConverter.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="WindowManager.cpp" />
@@ -36,7 +38,9 @@
     <ClInclude Include="ErrorLogger.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Loading.h" />
+    <ClInclude Include="Monster.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="Skymap.h" />
     <ClInclude Include="StringConverter.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="WindowManager.h" />
