--- a/repos/InfiniteShootFPS_DX11_END/InfiniteShootFPS_DX11/InfiniteShootFPS_DX11.vcxproj
+++ b/repos/InfiniteShootFPS_DX11_END/InfiniteShootFPS_DX11/InfiniteShootFPS_DX11.vcxproj
@@ -24,13 +24,13 @@
     <ClCompile Include="ErrorLogger.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Light.cpp" />
-    <ClCompile Include="Loading.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MonsterManager.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="SecondWindow.cpp" />
     <ClCompile Include="Skymap.cpp" />
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="StringConverter.cpp" />
@@ -44,12 +44,12 @@
     <ClInclude Include="ErrorLogger.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Light.h" />
-    <ClInclude Include="Loading.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterManager.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="SecondWindow.h" />
     <ClInclude Include="Skymap.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="StringConverter.h" />
